# iganet-python

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt  setup.py
.github/workflows/: ci-push-pr.yml  cmake-multi-platform.yml  gh-pages.yml  gitlab-sync.yml
cmake/: pybind11.cmake
pyiganet/: __init__.py
pyiganet/core/: __init__.py
pyiganet/csrc/: pyblocktensor.cxx.in  pybspline.cxx  pybspline.cxx.in  pyconfig.hpp.in  pyoptions.cxx
pyiganet/splines/: __init__.py
tests/: test_bspline_1d.py
